Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-3049

[C++/Python] ORC reader fails on empty file

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.11.0
    • C++

    Description

      Traceback (most recent call last):
        File "/home/antoine/arrow/python/pyarrow/tests/test_orc.py", line 83, in test_orcfile_empty
          check_example('TestOrcFile.emptyFile')
        File "/home/antoine/arrow/python/pyarrow/tests/test_orc.py", line 79, in check_example
          os.path.join(orc_data_dir, '%s.jsn.gz' % name))
        File "/home/antoine/arrow/python/pyarrow/tests/test_orc.py", line 62, in check_example_files
          table = orc_file.read()
        File "/home/antoine/arrow/python/pyarrow/orc.py", line 149, in read
          return self.reader.read(include_indices=include_indices)
        File "pyarrow/_orc.pyx", line 106, in pyarrow._orc.ORCReader.read
          check_status(deref(self.reader).Read(&sp_table))
        File "pyarrow/error.pxi", line 81, in pyarrow.lib.check_status
          raise ArrowInvalid(message)
      pyarrow.lib.ArrowInvalid: Must pass at least one record batch
      

      Jim Crist

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 50m
                  1h 50m

                  Slack

                    Issue deployment