ARROW-3049: [C++/Python] Fix reading empty ORC file